tests/golden/type_errors/contextual_lambda_arity_mismatch.cd
struct Point { x: number }

let score: fun(Point): number = fun () {
  return 0;
};
