tests/golden/type_errors/contextual_lambda_arity_mismatch.err
Type error at 3:33: expected 1 parameters but got 0
  let score: fun(Point): number = fun () {
                                  ^
